--- a/app/src/main/res/layout/find_view.xml
+++ b/app/src/main/res/layout/find_view.xml
@@ -64,4 +64,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/the_map" />
+
+    <ToggleButton
+        android:id="@+id/listToggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:checked="true"
+        android:text="ToggleButton"
+        android:textOff="Adventures"
+        android:textOn="Dots"
+        app:layout_constraintBottom_toBottomOf="@+id/main_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/the_map" />
 </android.support.constraint.ConstraintLayout>
