--- a/app/src/main/res/layout/activity_dot_detail.xml
+++ b/app/src/main/res/layout/activity_dot_detail.xml
@@ -31,14 +31,14 @@
         android:layout_marginBottom="8dp"
         android:adjustViewBounds="false"
         android:scaleType="fitCenter"
-        android:src="@drawable/background2"
+        android:src="@drawable/rick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.313"
-        tools:src="@drawable/background2"
-        tools:srcCompat="@drawable/background2" />
+        tools:src="@drawable/rick"
+        tools:srcCompat="@drawable/rick" />
 
     <TextView
         android:id="@+id/dotDistance"
