--- a/app/src/main/res/layout/activity_find_view.xml
+++ b/app/src/main/res/layout/activity_find_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FindExperiencesActivity.FindExperiencesActivity">
+    tools:context=".FindExperiencesActivity.findExperiencesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
