--- a/app/src/main/res/layout/activity_dot_detail.xml
+++ b/app/src/main/res/layout/activity_dot_detail.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/DotDetailImage"
         android:layout_width="259dp"
         android:layout_height="163dp"
         android:layout_marginStart="8dp"
