--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/DotDetailImage"
         android:layout_width="259dp"
         android:layout_height="163dp"
         android:layout_marginStart="8dp"
@@ -52,7 +52,7 @@
         android:text="Davide Falessi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+        app:layout_constraintTop_toBottomOf="@+id/DotDetailImage" />
 
     <Button
         android:id="@+id/signOut_btn"
