--- a/app/src/main/res/layout/activity_new_dot.xml
+++ b/app/src/main/res/layout/activity_new_dot.xml
@@ -193,6 +193,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.072"
+        android:clickable="true"
         tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
 
 </android.support.constraint.ConstraintLayout>
